# Computer-Graphic-PBL-work

./: README.md
code/: CMakeLists.txt  Matrix.cpp  OBJ_Loader.h  Pixel.hpp  Shader.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
notes/: TODO.md  计算机图形学-完整管线梳理.md  计算机图形学-项目结构设计.md
